--- a/SkillGapUI/angular-workspace/projects/skill-gap-analysis/src/app/home/home.component.html
+++ b/SkillGapUI/angular-workspace/projects/skill-gap-analysis/src/app/home/home.component.html
@@ -11,10 +11,12 @@
   
   <section>
     <div>
-    <button type="button" class="btn  btn-lg rounded-pill "> Let's Get Started</button>
-    
+      <button type="button" routerLink="whoareyou" class="btn  btn-lg rounded-pill "> Let's Get Started</button>
+      <!-- <a href="" routerLink="whoareyou">Hello</a> -->
     </div>
-    </section>
-  <app-nav-bar></app-nav-bar>
+    <aside><router-outlet ></router-outlet></aside>
+  </section>
+    <app-nav-bar></app-nav-bar>
+    
 </body>
 </html>  
