--- a/SkillGapUI/angular-workspace/projects/skill-gap-analysis/src/app/nav-bar/nav-bar.component.html
+++ b/SkillGapUI/angular-workspace/projects/skill-gap-analysis/src/app/nav-bar/nav-bar.component.html
@@ -22,12 +22,10 @@
                         <path fill="#f3752e" d="m198.1 31.5-6.7 13.1h17l6.7-13.1h-17z" data-color="1"></path>
                     </g>
                 </svg></a>
-                 
-              
             </div>
            <div class="icons">
-            <a routerLink="home">Home</a>
-            <a routerLink="anout">About</a>
+                <a routerLink="home">Home</a>
+                <a routerLink="about">About</a>
             </div>
         </header>
         <section>
