--- a/SkillGapUI/angular-workspace/projects/skill-gap-analysis/src/app/nav-bar/nav-bar.component.css
+++ b/SkillGapUI/angular-workspace/projects/skill-gap-analysis/src/app/nav-bar/nav-bar.component.css
@@ -2,7 +2,7 @@
     margin: 0%;
 }
 svg{
-    height: 4rem;
+    height: 3rem;
     position: relative;
 }
 
@@ -15,6 +15,7 @@ header a img{
 }
 header{
     height: 5rem;
+    align-items: center;
 }
 
 .icons a {
